src/test/deca/context/invalid/op_bin_plus.deca
//Test pour plus

//Resultat: invalid type for arithmetique operation boolean and string

{
    boolean x = true;
    string y = "";
    x+y ; 
}